-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.4
-
None
-
PC
-
9c9cdbedf173e3e5f73205826deb97337f182a3e
Compiling with g++ LTO throws up the following warning:
In member function 'rehash', inlined from 'findOrInsert' at /opt/qt-6.2/include/QtCore/qhash.h:640:19: /opt/qt-6.2/include/QtCore/qhash.h:553:17: warning: argument 1 value '18446744073709551615' exceeds maximum object size 9223372036854775807 [-Walloc-size-larger-than=] 553 | spans = new Span[nSpans]; /opt/qt-6.2/include/QtCore/qhash.h: In member function 'findOrInsert': /usr/include/c++/11.2.0/new:128:26: note: in a call to allocation function 'operator new []' declared here 128 | _GLIBCXX_NODISCARD void* operator new[](std::size_t) _GLIBCXX_THROW (std::bad_alloc)
Not a major problem but does look wrong.