QDBusMetaObjectGenerator: use qsizetype for counting things

Even though the meta object format stores 32-bit integers, which means
we can't have anywhere near 2 billion properties, methods, method
parameters, etc. This suppresses the warning that we may be trying to
allocate a negative amount of data in

qdbusmetaobject.cpp:438:60: warning: argument 1 value ‘18446744073709551615’ exceeds maximum object size 9223372036854775807 [-Walloc-size-larger-than=]

Task-number: QTBUG-105388
Task-number: QTBUG-103548
Change-Id: Ie4bb662dcb274440ab8bfffd17096df93614be8e
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 68eb0e673ce43dc25b479932aedc98aff1b727e3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>